<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:navigationIcon="@drawable/arrow_left_light_mode"
        app:title="@string/title_settings"
        app:titleCentered="false"
        app:titleTextColor="@color/yp_black" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/my_switch"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_night_mode"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_item"
        style="@style/SettingsTwoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share_light_mode"
        android:text="@string/title_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_item"
        style="@style/SettingsTwoTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support_light_mode"
        android:text="@string/title_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward_light_mode"
        style="@style/SettingsTwoTextStyle"
        android:text="@string/title_user_agreement" />

</LinearLayout>