<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yp_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="26sp"
        style="@style/MessageTextStyle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:cornerRadius="16dp"
        android:weightSum="3">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.PlayListMaker.MainButton"
            android:text="@string/title_search"
            app:icon="@drawable/search_light_mode" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.PlayListMaker.MainButton"
            android:layout_marginTop="16dp"
            android:text="@string/title_media"
            app:icon="@drawable/library_light_mode" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.PlayListMaker.MainButton"
            android:layout_marginTop="16dp"
            android:text="@string/title_settings"
            app:icon="@drawable/settings_light_mode" />
    </LinearLayout>

</LinearLayout>