<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.search.SearchActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yp_white"
        app:navigationIcon="@drawable/arrow_left_light_mode"
        app:title="@string/title_search"
        app:titleCentered="false"
        app:titleTextColor="@color/yp_black" />

    <!-- Поисковая строка -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_margin_start"
        android:layout_marginEnd="@dimen/search_margin_end"
        android:layout_marginTop="@dimen/search_margin_top"
        android:layout_marginBottom="8dp"
        style="@style/SearchBox"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/search_light_mode"
        app:startIconContentDescription="@string/search_icon"
        app:startIconTint="@color/search_icon"
        app:endIconDrawable="@drawable/clear_light_mode"
        app:endIconMode="clear_text"
        app:endIconContentDescription="@string/clear_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            style="@style/SearchBoxText"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Заголовок истории -->
    <TextView
        android:id="@+id/history_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/history_title"
        style="@style/HistoryTitle"
        android:visibility="gone"/>

    <!-- Контейнер контента, плейсхолдеров и прогрессбара -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Основной контент -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/track_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxHeight="500dp"
                android:clipToPadding="false"
                android:scrollbars="vertical" />

            <FrameLayout
                android:id="@+id/clear_history_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Плейсхолдер: нет результатов -->
        <LinearLayout
            android:id="@+id/placeholder_no_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="102dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_no_results"
                android:contentDescription="@string/no_results" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_results"
                style="@style/TextNoResultNoSignal"/>
        </LinearLayout>

        <!-- Плейсхолдер: нет соединения -->
        <LinearLayout
            android:id="@+id/placeholder_no_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="102dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder_no_connection"
                android:contentDescription="@string/no_connection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/no_connection"
                style="@style/TextNoResultNoSignal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:backgroundTint="@color/yp_black"
                android:textColor="@color/yp_white"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                style="@style/RoundedButtonRetry"/>
        </LinearLayout>


        <!-- Прогрессбар поверх всего -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="248dp"
            app:indicatorColor="@color/progressBar"
            android:visibility="gone"
            android:indeterminate="true"/>
    </FrameLayout>

</LinearLayout>
